# backend

./: .gitignore  .pylintrc  README.md  docker-compose.ci.yml  docker-compose.preflight.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_preflight_tests.sh
.github/workflows/: cd.yml  ci.yml
config/: .env.template
docker/: ci.sh
docker/django/: Dockerfile  start_server.sh
docker/nginx/: default.conf  negru.key  negru.pem  nginx.conf.d
docs/: ENVIRONMENTS.md  GIT.md  SSL.md
negrucoin/: dev_manage.py  manage.py  urls.py
negrucoin/api/: apps.py  urls.py  views.py
negrucoin/config/: .env.template
negrucoin/main/: admin.py  apps.py  dto.py  forms.py  models.py  serializers.py  urls.py  views.py
negrucoin/main/migrations/: 0001_initial.py
negrucoin/main/services/: money_service.py  top_service.py
negrucoin/main/static/main/css/: header.css  main.css
negrucoin/main/static/main/js/: burger.js  update_money.js
negrucoin/main/templates/main/: base.html  index.html  login.html  registration.html
negrucoin/main/tests/: test_auth.py  test_something.py
negrucoin/negrucoin/: asgi.py  settings.py  urls.py  wsgi.py
negrucoin/payment/: admin.py  models.py
negrucoin/payment/migrations/: 0001_initial.py
negrucoin/settings/: __init__.py  common.py  payment.py  security.py
sql/: test_db.sql  utils.py
tests/: conftest.py
tests/main/: test_auth.py  test_models.py  test_views.py
tests/main/services/: test_money_service.py
tests/payment/: test_models.py
